# whatsapp-bot

./: .env.online.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DR_RUNBOOK.md  Procfile  RAILWAY_INBOX.md  ai_responder.py  alembic.ini  app.py  auth_throttle.py  bot_content.json  compliance.py  content_loader.py  dedup.py  faq.py  graph_api.py  gunicorn.conf.py  http_hardening.py  message_store.py  phone_utils.py  pyproject.toml  railway.cleanup.toml  rate_limit.py  requirements-dev.txt  requirements.txt  settings.py  text_utils.py  webhook_events.py  webhook_schema.py
.github/workflows/: ci-cd.yml  ci.yml  pr-check.yml  security.yml
bot/: __init__.py  ai_responder.py  call_processor.py  chatwoot_client.py  chatwoot_config.py  chatwoot_intake.py  chatwoot_processor.py  content_loader.py  faq.py  message_compliance.py  message_dispatch.py  message_intake.py  message_logging.py  message_models.py  message_processor.py  message_responses.py  opt_out_keywords.py  processor_dependencies.py  reply_sinks.py  sensitive_filter.py  whatsapp_client.py
core/: __init__.py  cache.py  circuit_breaker.py  database.py  dependency_keys.py  phone_utils.py  privacy_notice.py  routes.py  runtime.py  sender_id.py  text_utils.py
docs/: access_control.md  breach_response.md  online_checks.md  privacy_notice.md  railway_retention_cleanup.md
inbox/: __init__.py  admin_arco.py  admin_auth.py  admin_conversations.py  admin_dashboard.py  admin_health.py  admin_message.html  admin_messages.py  admin_opt_outs.py  admin_pages.py  admin_panel.html  admin_panel.py  auth_throttle.py  compliance.py  routes.py  security.py  service.py  store.py  store_audit.py  store_common.py  store_crypto.py  store_models.py  store_opt_in.py  store_opt_outs.py  store_schema.py  views.py
migrations/: 001_inbox.sql  env.py  script.py.mako
migrations/versions/: 20260508a001_inbox_schema.py
scripts/: backup_postgres.sh  cleanup_inbox.py
static/: admin-fernet.js
templates/admin/: base.html  conversation_detail.html  conversations.html  dashboard.html  login.html  opt_outs.html
tests/: __init__.py  conftest.py  support.py  test_ai_responder.py  test_app.py  test_auth_throttle.py  test_business_content.py  test_chatwoot_client.py  test_chatwoot_routes.py  test_chatwoot_signature.py  test_cleanup_inbox.py  test_content_loader.py  test_dedup.py  test_faq.py  test_hallucination_guards.py  test_inbox.py  test_message_processor_di.py  test_message_store.py  test_online_checks.py  test_opt_out.py  test_prompt_injection.py  test_rate_limiting.py  test_runtime_dependencies.py  test_security.py  test_sender_id.py  test_sensitive_filter.py  test_webhook_validation.py
webhook/: __init__.py  chatwoot_routes.py  chatwoot_signature.py  dedup.py  events.py  graph_api.py  http_hardening.py  rate_limit.py  routes.py  schema.py  signature.py
