[project]
name = "tulum-btx-whatsapp-bot"
version = "0.1.0"
description = "WhatsApp Cloud API bot for Tulum BTX with Claude AI fallback."
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.3",
    "flask-limiter>=3.9.0,<5",
    "flask-talisman>=1.1.0,<2",
    "requests>=2.33.0,<3",
    "anthropic>=0.42.0,<1",
    "python-dotenv>=1.2.2,<2",
    "gunicorn>=23.0.0,<26",
    "redis>=5.0,<7",
    "psycopg[binary]>=3.2.0,<4",
    "psycopg-pool>=3.2.0,<4",
    "cryptography>=42.0.0,<47",
    "jsonschema>=4.23.0,<5",
    "alembic>=1.18,<2",
    "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1,<8",
    "pytest-mock>=3.14,<4",
    "bandit[toml]>=1.8,<2",
    "pip-audit>=2.8,<3",
    "ruff>=0.15,<1",
    "mypy>=1.20,<2",
    "pre-commit>=4.2,<5",
    "detect-secrets>=1.5,<2",
    "alembic>=1.18,<2",
    "types-requests",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bot", "core", "inbox", "webhook", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__", "migrations"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import order)
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear (likely bugs)
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "D",    # pydocstyle / PEP 257 docstrings
]
ignore = [
    # `assert` is fine in tests; bandit's S101 rule is too noisy for pytest.
    "S101",
    # Nested `with` is the natural pattern for psycopg `with conn: with cursor:`;
    # SIM117's combined form is harder to read here.
    "SIM117",
    # `MessageStoreUnavailable` etc. are ergonomic names; renaming to
    # `MessageStoreUnavailableError` adds churn without clarity.
    "N818",
]

[tool.ruff.lint.per-file-ignores]
# Tests use a lot of fixtures, monkeypatching, and helper closures — the strict
# bandit/security rules are noisy here without catching real issues.
"tests/**/*.py" = ["D", "S105", "S106", "S311"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app.py", "settings.py", "bot", "core", "inbox", "webhook", "scripts"]

[[tool.mypy.overrides]]
# Untyped third-party packages — silence missing-stubs noise.
module = [
    "anthropic",
    "anthropic.*",
    "flask_limiter",
    "flask_limiter.*",
    "flask_talisman",
    "jsonschema",
    "psycopg",
    "psycopg.*",
    "psycopg_pool",
    "psycopg_pool.*",
    "redis",
    "cryptography.*",
    "dotenv",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "online: opt-in live network checks against Railway, Meta, Anthropic, Postgres, and Redis",
]
